# contracts/openapi.json
@@ -371,6 +371,19 @@
             ],
             "title": "Romanization"
           },
+          "confidence": {
+            "anyOf": [
+              {
+                "type": "number",
+                "maximum": 1.0,
+                "minimum": 0.0
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Confidence"
+          },
           "scriptVariants": {
             "items": {
               "$ref": "#/components/schemas/ScriptVariantResponse"
@@ -513,6 +526,13 @@
           "type": {
             "type": "string",
             "title": "Error Type"
+          },
+          "input": {
+            "title": "Input"
+          },
+          "ctx": {
+            "type": "object",
+            "title": "Context"
           }
         },
         "type": "object",
